--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta name="viewport" content="width=1024">
     <meta charset="utf-8">
-    <meta name="tags" content="css, matrix(), matrix, webdev, codegen">
+    <meta name="tags" content="css, css3, html, linear, matrix(), matrix, webdev, codegen, generator, scale, rotate, skew, translate">
+    <meta name="keywords" content="transform,css,css3,html,linear,2d,matrix,generator,scale,rotate,skew,translate">
     <meta name="description" content="css matrix() visualizer">
     <meta name="author" content="j5ylim">
     <link rel= "stylesheet" href="../style.css">    
