--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta name="viewport" content="width=1024">
     <meta charset="utf-8">
-    <meta name="tags" content="css, css3, html, linear, matrix(), matrix, webdev, codegen, generator, scale, rotate, skew, translate, minimal, lightweight">
-    <meta name="keywords" content="transform, css, css3, html, linear, 2d, matrix, generator, scale, rotate, skew, translate, minimal, lightweight">
-    <meta name="description" content="css matrix()-family visualizer/demonstration">
+    <meta name="tags" content="demonstration, visualizer, css, css3, html, linear, matrix(), matrix, webdev, transform, codegen, generator, scale, rotate, skew, translate, minimal, lightweight">
+    <meta name="keywords" content="demonstration, visualizer, transform, css, css3, html, linear, 2d, matrix, generator, scale, rotate, skew, translate, minimal, lightweight">
+    <meta name="description" content="visualizer/demo for the css matrix()-family properties ">
     <meta name="author" content="j5ylim">
     <link rel= "stylesheet" href="../style.css">    
 </head>
