--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel= "stylesheet" href="../style.css">    
 </head>
     
+    <title>matrix-visualizer</title>
 <html>
 <body>
     <div class="pagediv-item">
